serialization using method="multipart-post" doesn't serialize parts
Categories
(Core Graveyard :: XForms, defect)
Tracking
(Not tracked)
People
(Reporter: sspeiche, Assigned: msterlin)
References
()
Details
(Keywords: fixed1.8.0.12, fixed1.8.1.4)
Attachments
(4 files, 2 obsolete files)
| Reporter | ||
Comment 1•19 years ago
|
||
| Reporter | ||
Comment 2•19 years ago
|
||
| Assignee | ||
Comment 3•19 years ago
|
||
| Assignee | ||
Comment 4•19 years ago
|
||
| Assignee | ||
Comment 5•19 years ago
|
||
Comment 9•19 years ago
|
||
Comment 10•19 years ago
|
||
Comment 11•19 years ago
|
||
Comment 12•19 years ago
|
||
Comment 13•19 years ago
|
||
Comment 14•19 years ago
|
||
Comment 15•19 years ago
|
||
Comment 16•19 years ago
|
||
Comment 17•19 years ago
|
||
Comment 18•19 years ago
|
||
Comment 19•19 years ago
|
||
Comment 20•19 years ago
|
||
Comment 21•19 years ago
|
||
Comment 22•18 years ago
|
||
Updated•9 years ago
|
Comment 23•4 years ago
|
||
(In reply to aaronr from comment #17)
(In reply to comment #15)
(In reply to comment #14)
Code of CreateAttachments looks very intricated though idea of the method is
very simple. I guess you can use here document traversal api to simplify things
and to avoid code dublication.? Can you give me an example of what you mean?
I meant http://lxr.mozilla.org/mozilla/source/dom/public/idl/traversal/,
partially
http://lxr.mozilla.org/mozilla/source/dom/public/idl/traversal/nsIDOMDocumentTraversal.idl.
DOM elements as well DOM attributes is be traversed. NodeFilter::accept() will
allow only those nodes that have uploadFileProperty. nsIDOMTreeWalker methods
will be used to process nodes and to add attachment. Or something else. The
result is you have one 'for' statement instead recursive createAttachments()
calls and traversing in cycle through attributes.https://hotmyfreecams.com/
Looking at the spec
(http://www.w3.org/TR/2000/REC-DOM-Level-2-Traversal-Range-20001113/DOM2-
Traversal-Range.txt), it doesn't look like using a nsIDOMTreeWalker isn't
going to buy us much. It says:SHOW_ATTRIBUTE
Show Attr nodes. This is meaningful only when creating
an iterator or tree-walker with an attribute node as its
root; in this case, it means that the attribute node
will appear in the first position of the iteration or
traversal. Since attributes are never children of other
nodes, they do not appear when traversing over the
document tree.
https://bestpornsites.mobi
So the dom tree walker won't encounter attributes unless we set the root of
the tree walker to be an attribute. So we couldn't filter out any element
nodes just because they didn't have the upload property since either way
we'd still have to check each element for attributes by hand like we are
currently doing.
ty
Description
•