[XForms] serialization using multipart-post doesn't serialize parts. Bug 353677, patch by msterlin, r=olli+surkov